# ibm_bob_hackathon

./: EXTERNAL_INTEGRATIONS.md  ONE_PAGE_OVERVIEW.md  README.md  automated_showcase_demo.py  bob_brain_insights.py  demo_bob_integration.py  demo_speed_guardian_nervous.py  explore_databases.py  feedback_loop.py  library_mode.py  mega_pattern_expansion.py  mode_aware_debugger.py  test_slayer.py  test_speed_guardian_real.py  universal_debugger.py
ai-debug-companion/: CONTRIBUTING.md  README.md  setup.py
ai-debug-companion/ai_debug_companion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ai-debug-companion/examples/: javascript_errors.js  python_errors.py
ai-debug-companion/tests/: __init__.py  test_parsers.py  test_suggestions.py
chaos-guardian/: README.md  demo_basic.py  demo_experiments.py  demo_extreme.py  pyproject.toml
chaos-guardian/chaos_guardian/: __init__.py  chaos_monkey.py  cli.py  core.py  models.py
chaos-guardian/chaos_guardian/injectors/: __init__.py  data_injector.py  disk_injector.py  exception_injector.py  latency_injector.py  network_injector.py  resource_injector.py  time_injector.py
codearchaeology/: LICENSE  README.md  pyproject.toml
codearchaeology/codearchaeology/: __init__.py  analyzer.py  cli.py  models.py  visualizer.py
codearchaeology/codearchaeology.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codeseek/: LICENSE  README.md  pyproject.toml
codeseek/codeseek/: __init__.py  cli.py  embeddings.py  indexer.py  models.py  parser.py  search.py  storage.py
codeseek/codeseek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codeseek/examples/: sample_code.py
