[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-guardian"
version = "1.0.0"
description = "Chaos Engineering for Python - Test resilience by breaking things"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Codes-Masterpiece", email = "codes@masterpiece.dev"}
]
keywords = ["chaos", "chaos-engineering", "testing", "resilience", "fault-injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
chaos-guardian = "chaos_guardian.cli:main"

[project.urls]
Homepage = "https://github.com/Ninja1232123/Codes-Masterpiece"
Repository = "https://github.com/Ninja1232123/Codes-Masterpiece"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaos_guardian*"]
