[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeseek"
version = "0.1.0"
description = "Semantic code search engine with natural language queries and AST understanding"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "CodeSeek Team"}
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "textual>=0.47.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[project.scripts]
codeseek = "codeseek.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
